# presentations

./: Cargo.toml  LICENSE
2018-05 Rust Mongo/product_upload_demo/: Cargo.toml
2018-05_Rust_Mongo/: Cargo.toml  rust-toolchain
2018-05_Rust_Mongo/examples/: sample_data.csv  test_parallel_upload.sh  upload_sample.sh
2018-05_Rust_Mongo/slides/: rust-2018-05-marp.md  rust-2018-05.md
2018-05_Rust_Mongo/src/: core.rs  main.rs  mongo.rs  product.rs  product_id.rs
examples/: upload_sample.sh
src/: product.rs  product_id.rs
